--- a/app/views/reminders/edit.html.haml
+++ b/app/views/reminders/edit.html.haml
@@ -1,5 +1,5 @@
 .wrapper
   #devise.wide
-    .inline_reminder
+    .inline_reminder.edit
       %h2 Edit Reminder
       = render 'form', reminder: @reminder, remote: false
