--- a/app/views/snooze/snooze_reminder.html.haml
+++ b/app/views/snooze/snooze_reminder.html.haml
@@ -1,5 +1,5 @@
 #devise.wide
-  %h2 We have snoozed '#{ @reminder.subject }'
+  %h2.readable We have snoozed '#{ @reminder.subject }'
   %p.snoozed
     New reminder is set for
     %b #{ @reminder.formatted_send_at}.
