--- a/app/views/user_mailer/_footer.html.haml
+++ b/app/views/user_mailer/_footer.html.haml
@@ -1,12 +1,10 @@
 = render 'user_mailer/hr'
 %tr
-  %td{:style=>"vertical-align:top;"}
-    %p{:style=>"margin: 0;"}
-      = link_to "Upcoming", reminders_url, :style => "color: #{@link_color}; margin-right:5px;font-size:12px;"
-      = link_to "Settings", settings_url, :style => "color: #{@link_color}; margin-right:5px;font-size:12px;"
-  %td{:style=>"text-align: right;"}
+  %td{:style=>"text-align: left;"}
     %p{:style => "color:#999;font-style:italic;margin:3px 0 20px;font-size:11px"}
       © 2012 
       = link_to "Siyelo Software", "http://siyelo.com/", :style => "color: #{@link_color}; font-size:11px;"
-      %br
+      
+  %td{:style=>"text-align: right;"}
+    %p{:style => "color:#999;font-style:italic;margin:3px 0 20px;font-size:11px"}
       All rights reserved.
