--- a/app/views/user_mailer/confirmation.html.haml
+++ b/app/views/user_mailer/confirmation.html.haml
@@ -4,11 +4,11 @@
 %html
   %head
     %meta{ 'content' => "text/html; charset=UTF-8", 'http-equiv' => "Content-Type" }
-  %body{:style => "background:url(http://hound.cc/assets/bg.png) #fef4e0;font-size:12px;font-family:Helvetica,Arial,sans-serif;margin:0;padding:20px 0 0;line-height:1.4;border-top:4px dashed #f1decb;"}
+  %body{:style => "background:url(http://hound.cc/assets/bg.png) #fef4e0;font-size:12px;font-family:Helvetica,Arial,sans-serif;margin:0;padding:15px 0 0;line-height:1.4;border-top:4px dashed #f1decb;"}
     -# this is a smell - TODO refactor into separate views
     %table{:style => 'margin: 0 auto;width:600px;'}
       %tbody
-        
+        = render 'mail_nav'
         - unless @user_active
           = render 'invite'
         - else
