--- a/app/views/user_mailer/recipient_reminder.html.haml
+++ b/app/views/user_mailer/recipient_reminder.html.haml
@@ -4,19 +4,22 @@
 %html
   %head
     %meta{ 'content' => "text/html; charset=UTF-8", 'http-equiv' => "Content-Type" }
-  %body{:style => "background:url(http://hound.cc/assets/bg.png) #fef4e0;font-size:12px;font-family:Helvetica,Arial,sans-serif;margin:0;padding:20px 0 0;line-height:1.4;border-top:4px dashed #f1decb;"}
+  %body{:style => "background:url(http://hound.cc/assets/bg.png) #fef4e0;font-size:12px;font-family:Helvetica,Arial,sans-serif;margin:0;padding:15px 0 0;line-height:1.4;border-top:4px dashed #f1decb;"}
     %table{:style => "margin: 0 auto;width:600px;"}
       %tbody
-
+        = render 'mail_nav'
+              
         %tr
           %td{ :width => "70%"}
-            %h1{:style => "color:#582a00;margin:40px 0 10px;font-size:24px;"}= "Reminder: #{@original_subject}"
+            %h1{:style => "color:#582a00;margin:40px 0 10px;font-size:24px;"}
+              %span{ :style => "color:#888;font-size:16px;font-weight:normal;"} Reminder:
+              = "#{@original_subject}"
 
             %p{:style => "font-size:12px;line-height:1.4;color:#444;margin:0 0 15px;"}
               %b== #{@owner}
               created this reminder on
               %b== #{@created_at}
           = render 'header'
-
+        = render 'hr'
         = render 'body', body: @body
         = render 'footer'
