--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -13,6 +13,7 @@
 %meta{ :name => "viewport", :content => "width=device-width" }
 
 -# Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons
+%link{:href => "favicon.ico", :rel => "shortcut icon", :type => "image/x-icon"}
 
 = stylesheet_link_tag "application"
 
